<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Sheet</string>
    <string name="empty_categories">No sheets found</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="add_category_label">Add sheet</string>
    <string name="add_category_description">Please insert name for new sheet!</string>
    <string name="remove_category_label">Remove sheet</string>
    <string name="remove_category_confirm">Do you really want to remove this sheet?</string>
    <string name="remove_history_entry_label">Remove history entry</string>
    <string name="remove_history_entry_confirm">Do you really want to remove this history entry?</string>
    <string name="remove_all_entries_label">Remove all</string>
    <string name="remove_all_entries_confirm">Do you really want to remove all history entries?</string>
    <string name="exit_label">Exit</string>
    <string name="amount_label">Total:</string>
    <string name="category_label">Sheet</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="category_already_exists">Sheet already exists</string>
    <string name="stats_current_amount_label">Total:</string>
    <string name="stats_from_label">First entry:</string>
    <string name="stats_to_label">Last entry:</string>
    <string name="stats_sum_today_label">Today:</string>
    <string name="stats_sum_yesterday_label">Yesterday:</string>
    <string name="stats_sum_week_label">This week:</string>
    <string name="stats_sum_month_label">This month:</string>
    <string name="stats_sum_year_label">This year:</string>
    <string name="stats_average_label">Average:</string>
    <string name="about_button_website">Visit project on Github</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_history">History</string>
    <string name="tab_stats">Statistics</string>
    <string name="haptic_label">Haptic feedback</string>
    <string name="haptic_summary">Enable haptic feedback for keypad buttons</string>
    <string name="add_entry_label">Add entry</string>
    <string name="add_history_amount_label">Amount:</string>
    <string name="add_history_date_label">Date:</string>
    <string name="add_history_time_label">Time:</string>
    <string name="delete_all_entries_label">Delete all</string>
    <string name="add_history_label">History Entry</string>
</resources>