<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/FillBoth"
              android:orientation="vertical"
              android:minWidth="250dp"
              android:padding="5dp">

    <TextView style="@style/WrapBoth"
              android:text="@string/add_history_amount_label" />

    <EditText style="@style/FillWrap"
              android:id="@+id/add_history_amount"
              android:singleLine="true"
              android:numeric="decimal|signed" />

    <TextView style="@style/WrapBoth"
              android:text="@string/add_history_date_label" />

    <LinearLayout style="@style/FillWrap"
                  android:orientation="horizontal">
        <Button style="@style/FillWrap"
                android:id="@+id/add_history_date"
                android:layout_weight="1.0"
                android:onClick="onDateButtonClick" />
        <Button style="@style/FillWrap"
                android:id="@+id/add_history_time"
                android:layout_weight="1.0"
                android:onClick="onTimeButtonClick" />
    </LinearLayout>

    <LinearLayout style="@style/FillWrap"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp">
        <Button style="@style/FillWrap"
                android:text="@string/save"
                android:onClick="onSaveButtonClick"
                android:layout_weight="1.0" />
        <Button style="@style/FillWrap"
                android:text="@string/cancel"
                android:onClick="onCancelButtonClick"
                android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>